Homer-385 small fixes to last link on 404 page and primary cta on mobile button padding

--- a/src/sass/components/_primary-page-cta.scss
+++ b/src/sass/components/_primary-page-cta.scss
@@ -37,7 +37,12 @@
   .button__primary {
     margin-right: 32px;
   }
-
+  .button__secondary {
+    margin-top: 24px;
+    @media(min-width: 768px) {
+      margin-top: 0;
+    }
+  }
   .secondary-button {
     margin-left: 40px;
     padding: 12px 30px;
@@ -52,6 +57,7 @@
     .column > h {
       margin-bottom: 24px;
     }
+
   }
   @media screen and (max-width: $medium-large-screen) {
     .inner {
